<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundRenatoRPV"
    tools:context="com.renato.renatoRPV.gui.CadastroUsuarioActivity" >

    <ImageView
        android:id="@+id/logo_renatoRPV"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/img_RenatoRPV_logo_descr"
        android:src="@mipmap/logo_renatorpv"
        />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/logo_renatoRPV"
        android:hint="@string/email_field_hint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@id/login_email"
        android:inputType="textPassword"
        android:hint="@string/password_field_hint"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text"
        android:background="@color/buttonColor"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:layout_below="@+id/login_senha"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLogin" />


    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="onClickLogin"
        android:layout_alignTop="@+id/login_btn"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_login_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/btn_login_facebook"
        android:onClick="onClickLogin"
        />

    <TextView
        android:id="@+id/link_cadastro_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_register_users"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/btn_login_twitter"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLogin"
        />

</RelativeLayout>
